--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,188 @@
+
+body {
+    margin: 0;
+}
+
 #container {
-    width: 1350px;
-    height: 1000px;
+    width: 1348px;
+    height: 700px;
+    background-color: skyblue;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0;
+    border: none;
+
+}
+
+.frame {
+    position: center;
+    border: black;
+    border-style: double;
+    box-sizing: inherit;
+    margin-top: 30px;
+    margin-bottom: 250px;
     background-color: aquamarine;
+
+}
+.displayedWord {
+
+    color: black;
+    font-size: large;
+}
+#word {
+    /*size: 100px;*/
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: stretch;
+    flex-wrap: wrap;
+    margin-top: 0;
+    /*border: red;*/
+    /*border-style: double;*/
+    /*margin-right: 0;*/
+    /*margin-left: 10px;*/
+}
+
+label {
+    color: black;
+    display: flex;
+    flex-direction: inherit;
+    justify-content: center;
+
+    border: none;
+    margin-top: 0;
+    /*width:200px;*/
+    text-transform: uppercase;
+    /*margin-left: 75px;*/
+
+
+}
+
+#enter-word {
+    width: 165px;
+    text-transform: uppercase;
+    background-color: darkgrey;
+    margin-left: 75px;
+}
+
+#check {
+width: 60px;
+height: 22px;
+}
+.nbr{
+}
+
+#correct {
+    width: 160px;
+    color: green;
+    margin-left: 275px;
+    margin-top: -80px;
+}
+
+#wrong {
+    width: 200px;
+    color: red;
+    margin-left: 280px;
+    margin-top: -30px;
+}
+
+#feedback {
+    width:290px;
+    height: 200px;
+    text-transform: uppercase;
+    position: static;
+    margin-top: 20px;
+    margin-left: 60px;
+}
+
+.toggle {
+
+    position : relative ;
+    display : flex;
+    width : 45px;
+    height : 15px;
+    background-color: red;
+    border-radius: 20px;
+    border: 2px solid black;
+    margin-top: -10px;
+    margin-left: 40px;
+}
+.toggle:after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 13px;
+    border-radius: 50%;
+    background-color: black;
+    top: 1px;
+    left: 1px;
+    transition:  all 0.5s;
+}
+/* Toggle text */
+.onOff {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+    margin-top: 2px;
+}
+
+/* Checkbox checked effect */
+.checkbox:checked + .toggle::after {
+    left : 25px;
+}
+
+/* Checkbox checked toggle label bg color */
+.checkbox:checked + .toggle {
+    background-color: green;
+}
+
+/* Checkbox vanished */
+.checkbox {
+    display : none;
+}
+
+
+.show {
+margin-top: 0;
+    /*margin-left: 20px;*/
+    /*border: red;*/
+    /*border-style: double;*/
+}
+
+#switches {
+    /*border-style: dotted;*/
+    height: 100px;
+    width: 400px;
+    margin-left: 0;
+
+}
+
+#meanings {
+    height: 100px;
+    width: 400px;
+    /*border: red;*/
+    /*border-style: double;*/
+}
+
+#polishWord {
+    color: black;
+    display: none;
+    /*flex-direction: row;*/
+    justify-content: center;
+    /*align-items: stretch;*/
+    /*flex-wrap: wrap;*/
+    border: none;
+    margin-top: 0;
+}
+
+#englishWord {
+
+    color: black;
+    display: none;
+    /*flex-direction: row;*/
+    justify-content: center;
+    /*align-items: stretch;*/
+    /*flex-wrap: wrap;*/
+    border: none;
+    margin-top: 0;
 }
