--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,8 @@ h2 {
 #enter-word {
 
     border: solid 3px ;
-    background-color: #b6b4b4;
+    background-color: #f5ebeb;
+
 
 
 }
@@ -171,23 +172,21 @@ h2 {
     height: 13px;
     border-radius: 50%;
     background-color: black;
-    top: 1px;
-    left: 1px;
+    top: -1px;
+    left: -1px;
     transition:  all 0.5s;
 }
-/* Toggle text */
+
 .onOff {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 11px;
-    /*margin-top: 1px;*/
 }
 
-/* Checkbox checked effect */
+
 .checkbox:checked + .toggle::after {
     left : 25px;
 }
 
-/* Checkbox checked toggle label bg color */
 .checkbox:checked + .toggle {
     background-color: green;
 }
@@ -218,7 +217,9 @@ display: none;
 }
 
 #translation:hover,
-#translation:active {
+#translation:active,
+#check:hover,
+#check:active {
     font-weight: bold;
     cursor: pointer;
     background-color: #b6b4b4;
