--- a/stylesMain.css
+++ b/stylesMain.css
@@ -54,9 +54,9 @@ a:visited {
 }
 
 a:hover {
-    color: orangered;
+    color: #ff4800;
     font-weight: bold;
-    text-decoration: underline orangered;
+    text-decoration: underline #ff4800;
 }
 
 a:active {
