--- a/styles.css
+++ b/styles.css
@@ -6,29 +6,38 @@
 
 }
 
+
+
+
 body {
     color: #495057;
     font-family: sans-serif;
     position: relative;
+    font-size: 25px;
+  background-image: linear-gradient(to bottom right, #ade5d4, #8398e8);
+
+
 }
 
 #container {
-    width: 80%;
-    margin: 0 auto;
+  margin: 30px auto;
+  width: 70%;
+  border: 1px solid black;
+  border-radius: 25px;
+  background-color: white;
 }
+
 
 
 nav {
     display: grid;
     background-color: #99e9f2;
-
-    height: 50px;
+    height: 70px;
     grid-template-columns: repeat(4, 1fr);
-
-    font-size: 18px;
     grid-auto-flow: column;
     align-items: center;
     justify-content: center;
+    border-radius: 25px 25px 0 0;
 }
 
 
@@ -55,17 +64,26 @@ a:active {
     font-style: italic;
 }
 
-.frame {
+.app {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-
+    grid-template-rows: repeat(2, 1fr);
 }
 
-#switches {
-grid-column: 1 / 2;
-    grid-row: 2 /3;
+#control-panel {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  gap: 50px;
+  row-gap: 50px;
+  grid-row-gap: 50px;
 }
+
+
+
+/*#switches {*/
+/*grid-column: 1 / 2;*/
+/*    grid-row: 2 /3;*/
+/*}*/
 
 #transDirection {
     margin-top: 20px;
@@ -87,11 +105,9 @@ grid-column: 1 / 2;
 
 #answer-box {
     grid-column: 2 / 4;
-    grid-row: 2 / 3;
-    align-self: start;
+    grid-row: 1 / 2;
     text-align: center;
-    align-content: center;
-    grid-row-gap: 10px;
+    align-self: end;
 }
 
 h2 {
@@ -99,15 +115,15 @@ h2 {
 }
 
 #enter-word {
-
+    width: 40%;
     border: solid 3px ;
     background-color: #f5ebeb;
-
-
-
 }
 
+::placeholder {
+  text-align: center;
 
+}
 
 
 /*#check {*/
@@ -129,19 +145,22 @@ h2 {
 .words-array-box {
     grid-column: 4 / 5;
     grid-row: 1 / 7;
+  grid-row-gap: 20px;
 }
 
-
+#word-1 {
+  margin-top: 5px;
+}
 
 
 #correct {
     color: green;
-    padding-top: 5px;
+    padding-top: 15px;
 }
 
 #wrong {
     color: #f33c3c;
-    padding-top: 5px;
+    padding-top: 15px;
 
 }
 
@@ -151,10 +170,9 @@ h2 {
     position : relative ;
     display : flex;
     width : 52px;
-    height : 15px;
+    height : 18px;
     background-color: #f33c3c;
     color: black;
-
     border-radius: 15px;
     border: 2px solid black;
 }
@@ -169,11 +187,11 @@ h2 {
     content: '';
     position: absolute;
     width: 25px;
-    height: 13px;
+    height: 16px;
     border-radius: 50%;
     background-color: black;
     top: -1px;
-    left: -1px;
+    left: -2px;
     transition:  all 0.5s;
 }
 
@@ -195,8 +213,10 @@ h2 {
     display : none;
 }
 
-.show {
-align-self: end;
+.show-lang {
+    align-self: end;
+    margin-top: 10px;
+
 
 }
 #englishWord {
@@ -213,6 +233,7 @@ display: none;
 }
 #translation,
 #translation:visited {
+    margin-top: 10px;
     width: 70%;
 }
 
@@ -225,7 +246,7 @@ display: none;
     background-color: #b6b4b4;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 900px) {
     #container {
         width: 100%;
 
@@ -236,8 +257,9 @@ display: none;
         font-weight: bold;
 
     }
-    .frame {
+    .app {
         width: 100%;
+        grid-row-gap: 20px;
     }
     #translation {
         width: 100%;
@@ -247,7 +269,9 @@ display: none;
         text-align: center;
         align-content: center;
     }
-
+    #enter-word {
+      width: 60%;
+    }
 }
 
 
