--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
 }
 
 #container {
+    height: 800px;
   margin: 30px auto;
   width: 70%;
   border: 1px solid black;
@@ -118,6 +119,7 @@ h2 {
     width: 40%;
     border: solid 3px ;
     background-color: #f5ebeb;
+
 }
 
 ::placeholder {
@@ -143,6 +145,7 @@ h2 {
 
 }
 .words-array-box {
+
     grid-column: 4 / 5;
     grid-row: 1 / 7;
   grid-row-gap: 20px;
