--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,17 @@
 }
 
 
-
+html {
+}
 
 body {
     color: #495057;
     font-family: sans-serif;
     position: relative;
     font-size: 25px;
-  background-image: linear-gradient(to bottom right, #ade5d4, #8398e8);
+    background-image: linear-gradient(to bottom right, #ade5d4, #8398e8);
+
+
 
 
 }
@@ -33,7 +36,7 @@ body {
 nav {
     display: grid;
     background-color: #99e9f2;
-    height: 70px;
+    height: 100px;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-flow: column;
     align-items: center;
