--- a/styles.css
+++ b/styles.css
@@ -317,19 +317,19 @@ td {
   }
   .app {
     width: 100%;
-    grid-row-gap: 20px;
+
   }
-  #translation {
+  #translation #showVocabList {
     width: 100%;
   }
-  #answer-box {
-    grid-row: 2 / 4;
-    text-align: center;
-    align-content: center;
-  }
-  #enter-word {
-    width: 60%;
-  }
+  /*#answer-box {*/
+  /*  grid-row: 2 / 4;*/
+  /*  text-align: center;*/
+  /*  align-content: center;*/
+  /*}*/
+  /*#enter-word {*/
+  /*  width: 60%;*/
+  /*}*/
 }
 
 
