--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,9 @@ a:active {
 
 #answer-box {
   grid-column: 2 / 4;
-  grid-row: 1 / 3;
+  grid-row: 1 / 2;
   text-align: center;
-  align-self: center;
+  align-self: end;
 }
 
 h2 {
